refact(angular): delete and add some code in user module

--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user-list/user-list.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user-list/user-list.component.html
@@ -1,1 +1,14 @@
-<p>user-list works!</p>
+<mat-card>
+  <mat-card-title>Friend List</mat-card-title>
+  <mat-card-content>
+    <mat-list>
+      <mat-list-item *ngFor="let friend of friends">
+        <div *ngIf="friend.status === 'Active'">
+          <!-- <fa-icon [icon]="['fas', 'square']"></fa-icon> -->
+        </div>
+        <div mat-line>{{friend.name}}</div>
+        <div mat-line> {{friend.status}} </div>
+      </mat-list-item>
+    </mat-list>
+  </mat-card-content>
+</mat-card>
