--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/app.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/app.component.html
@@ -304,7 +304,7 @@
 
 <!-- Toolbar -->
 <mat-toolbar>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+  <button style="margin-right: 30px;" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>
   <span>{{ title }}</span>
