refact(angular): add bootstrap

--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/app.component.scss
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/app.component.scss
@@ -2,7 +2,7 @@
     flex: 1 1 auto;
   }
   .content {
-    display: flex;
+    // display: flex;
     margin: 82px auto 32px;
     padding: 0 16px;
     max-width: 960px;
