--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user.component.html
@@ -1,1 +1,3 @@
-<p>user works!</p>
+<mat-card style="width: 760px;">
+    <app-logged-user-status (onSignOut)="SignOut()"></app-logged-user-status>
+</mat-card>
