status dropdown icon click event

--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/logged-user-status/logged-user-status.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/logged-user-status/logged-user-status.component.html
@@ -3,7 +3,7 @@
         <p>User: {{username}}
             <br />
             {{status}}
-            <button mat-icon-button aria-level="Change Status">
+            <button mat-icon-button aria-level="Change Status" (click)="on_status_dropdown()">
                 <mat-icon>arrow_drop_down</mat-icon>
             </button>
         </p>
