--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user-status-dropdown/user-status-dropdown.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user-status-dropdown/user-status-dropdown.component.html
@@ -1,1 +1,25 @@
-<p>user-status-dropdown works!</p>
+<div class="row">
+  <div class="col-md-12">
+    <mat-card>
+      <mat-card-content>
+        <div class="row">
+            <div class="col-md-6">
+              <h2><i class="bi bi-person-square" style="margin-right: 5px;"></i> {{user.name}}</h2>
+            </div>
+            <div class="col-md-6" style="text-align: right;">
+              <i class="bi bi-check-circle-fill" [style.color]="color" style="margin-right: 5px;"></i> <span>{{activeStatus}}</span>
+            </div>
+          
+            <div class="col-md-12" >
+              <mat-form-field appearance="outline"  >
+                <mat-label>Active Status</mat-label>
+                <mat-select [(ngModel)]="activeStatus" (selectionChange)="changeStatus()">
+                  <mat-option *ngFor="let status of statusList" [value]="status.value">{{status.label}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
