--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/authentication/sign-in/sign-in.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/authentication/sign-in/sign-in.component.html
@@ -7,7 +7,7 @@
                 <input type="text" formControlName="username" class="form-control" />
             </div>
             <div class="form-group">
-                <button class="btn btn-primary">Sign in</button>
+                <button type="button" [routerLink]="['/user']" class="btn btn-primary">Sign in</button>
             </div>
         </form>
     </div>
