--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/authentication/sign-in/sign-in.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/authentication/sign-in/sign-in.component.html
@@ -1,15 +1,32 @@
-<div class="card">
-    <h1 class="card-header">User Login:</h1>
-    <div class="card-body">
-        <form>
-            <div class="form-group">
-                <label for="username">Username: </label>
-                <input type="text" formControlName="username" class="form-control" />
-            </div>
-            <div><br></div>
-            <div class="form-group">
-                <button type="button" [routerLink]="['/user']" class="btn btn-primary">Sign in</button>
-            </div>
-        </form>
+ <div class="row">
+    <div class="col-md-12">
+        <mat-card>
+            <mat-card-title>
+                User Login:  
+            </mat-card-title>
+            <mat-card-content>
+                <div class="col-md-12" >
+                    <form class="sign-up-form">
+                        <div class="col-md-12" >
+                        <mat-form-field class="full-width">
+                            <div class="col-md-12" >
+                                <label for="username">Username: </label>
+                            </div>
+                                <div class="col-md-12" >
+                                <input type="text" placeholder="Username" name="username" formControlName="username" class="form-control" />
+                             </div>
+                        </mat-form-field>
+                        </div>
+
+                        <div class="col-md-12" >
+                        <button mat-raised-button type="submit" [routerLink]="['/user']" color="accent">Sign in</button>
+                        </div>
+                    </form>
+                </div>             
+            </mat-card-content>
+            <mat-card-actions>
+                <!-- <button mat-raised-button (click)="signin()" color="primary">Sign in</button> -->
+            </mat-card-actions>
+        </mat-card>
     </div>
-</div>    
+</div> 
