--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/authentication/sign-in/sign-in.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/authentication/sign-in/sign-in.component.html
@@ -19,7 +19,7 @@
                         </div>
 
                         <div class="col-md-12" >
-                        <button mat-raised-button type="submit" [routerLink]="['/user']" color="accent">Sign in</button>
+                        <button mat-raised-button type="button" [routerLink]="['/user']" color="accent">Sign in</button>
                         </div>
                     </form>
                 </div>             
