--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/authentication/sign-in/sign-in.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/authentication/sign-in/sign-in.component.html
@@ -1,3 +1,24 @@
+<!-- <div class="row">
+    <div class="col-md-12">
+        <mat-card>
+            <mat-card-title><i class="bi bi-door-open-fill"></i> Sign In</mat-card-title>
+            <mat-card-content>
+                <form>
+                    <div class="form-group">
+                        <label for="username">Username: </label>
+                        <input type="text" formControlName="username" class="form-control" />
+                    </div>
+                    <div><br></div>
+                    <div class="form-group">
+                        <button type="button" [routerLink]="['/user']" class="btn btn-primary">Sign in</button>
+                    </div>
+                </form>
+            </mat-card-content>
+        </mat-card>
+    </div>
+</div> -->
+
+
 <div class="card">
     <h1 class="card-header">User Login:</h1>
     <div class="card-body">
@@ -12,4 +33,4 @@
             </div>
         </form>
     </div>
-</div>    
+</div> 
