--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user-list/user-list.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user-list/user-list.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-12">
     <mat-card>
-      <mat-card-title>Friend List</mat-card-title>
+      <mat-card-title><i class="bi bi-people-fill"></i> Friend List</mat-card-title>
       <mat-card-content>
         <mat-list>
           <mat-list-item *ngFor="let friend of friends">
