--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user-status-dropdown/user-status-dropdown.component.scss
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user-status-dropdown/user-status-dropdown.component.scss
@@ -1,7 +1,29 @@
+// /** No CSS for this example */
 
+// /deep/ div {
+//     color: red;
+//   }
   
-
- 
- 
+//   /deep/ .mat-paginator-icon {
+//     background-color: yellow;
+//   }
   
+//   /deep/ .mat-select-panel {
+//     background-color: red;
+//   }
   
+//   /deep/ .mat-form-field-infix {
+//     background-color: red;
+//   }
+  
+//   /deep/ .mat-select {
+//     background-color: green;
+//   }
+  
+//   /deep/ .mat-select-value {
+//     color: black;
+//   }
+  
+//   /deep/ .mat-form-field-type-mat-select .mat-form-field-label {
+//     color: white;
+//   }
