--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user.component.html
@@ -1,5 +1,5 @@
-<mat-card>
+<!-- <mat-card>
     <app-logged-user-status (onSignOut)="SignOut()" (onStatusChange)="StatusDropdown()"></app-logged-user-status>
-</mat-card>
+</mat-card> -->
 <router-outlet></router-outlet>
 
