--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/authentication/sign-in/sign-in.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/authentication/sign-in/sign-in.component.html
@@ -4,11 +4,12 @@
         <form>
             <div class="form-group">
                 <label for="username">Username: </label>
-                <input type="text" formControlName="username" class="form-control" />
+                <input type="text" [ngModelOptions]="{standalone:true}" [(ngModel)]="user.name" class="form-control" />
+                <h5>{{message}}</h5>
             </div>
             <div><br></div>
             <div class="form-group">
-                <button type="button" [routerLink]="['/user']" class="btn btn-primary">Sign in</button>
+                <button type="button" (click)="signIn()"  class="btn btn-primary">Sign in</button>
             </div>
         </form>
     </div>
