--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user-list/user-list.component.html
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/src/app/modules/user/user-list/user-list.component.html
@@ -1,25 +1,20 @@
-<app-user-status-dropdown></app-user-status-dropdown>
+<app-user-status-dropdown (messageEvent)="receiveMessage($event)" ></app-user-status-dropdown>
 <div class="row">
   <div class="col-md-12">
     <mat-card>
       <mat-card-title>Friend List</mat-card-title>
       <mat-card-content>
         <mat-list>
-          <mat-list-item *ngFor="let friend of friends">
+          <mat-list-item *ngFor="let user of users" >
             <div>
-              <i *ngIf="friend.status === 'Active';else offlineUser" class="bi bi-person-check-fill"
-                style="font-size: 1.5rem;">
-              </i>
-              <ng-template #offlineUser>
-                <i class="bi bi-person-dash-fill" style="font-size: 1.5rem;"></i>
-              </ng-template>
+              <h1><i class="bi bi-person-square" style="margin-right: 5px;"></i></h1>
             </div>
             &nbsp;&nbsp;
             <div>
               <div mat-line>
-                {{friend.name}}</div>
-              <div mat-line>
-                {{friend.status}}
+               <span><i class="bi bi-check-circle-fill" [style.color]="user.status.color" style="margin-right: 5px;"></i></span> {{user.name}}</div>
+              <div mat-line  style="margin-right: 5px;font-size: 10px;">
+                {{user.status.activeStatus}}
               </div>
             </div>
           </mat-list-item>
